# ChangeLog for x11-plugins/qutim-aescrypto
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*qutim-aescrypto-0.3.9999 (20 Jun 2010)

  20 Jun 2010; Viktor Lazarev <taurus101v@gmail.com>
  +qutim-aescrypto-0.3.9999.ebuild:
  initial ebuild
