@@ -1,3 +1,3 @@
-EBUILD qutim-aescrypto-0.3.9999.ebuild 1053 RMD160 05c708f6049e5236d11003a8c9167011a470b9b0 SHA1 28e75371ab8c7364c2f61e57f9269906f9aaf34b SHA256 ac1ad452526d4aeca548f1ed7e8a018cfd31e3b025647dd2ce62249e38fdeb05
-MISC ChangeLog 276 RMD160 2356712c5108c8b4c9d02806126807ff7a0c312f SHA1 bc5763792380b796d6ba7e536fc684ae5b4460e5 SHA256 863ffa354f4b069ff61bd7460559b2a9eccb81af4bcc77fcf979578accf2ec63
+EBUILD qutim-aescrypto-0.3.9999.ebuild 848 RMD160 9fb5e09a00414e597b44bcb938e31f0eccb90a79 SHA1 462567f6564309bb4e748fd3f614e787b9f471a7 SHA256 416b7f3bb53d476f102504cc866de762b9475dd2a668a5bbc10eb54928211f99
+MISC ChangeLog 387 RMD160 a2f8b2ea79bf291b21f436f61eaea2b98d08e10f SHA1 0e6aa23b2aec2a008b96bb092db877ea357dcfca SHA256 1c60eb4b3e7b5022ba08d18e8b642d1efad984257b967ab5b5913e0f8239c895
 MISC metadata.xml 242 RMD160 9c5b910c7c12c8a1ed8bd87a7ad0b9bcfc4733d4 SHA1 4c37aa691790a1b3c6ce27b54062f88f3243b1b7 SHA256 5cfd8583ff311843d5530c5a3d10fbe6c87b58b100697e505b3ac1838059755a
