@@ -1,1 +1,1 @@
-EBUILD qutim-floaties-0.3.9999.ebuild 812 RMD160 987dd2e16035ac9228aa6713b694fa9904e27597 SHA1 de21708f9b4fc89337a1895cb896dad997730e30 SHA256 c36154d957d0d857052fda5b4884caac8dda469e1cc4c8ad03cf78ba4db289e3
+EBUILD qutim-floaties-0.3.9999.ebuild 819 RMD160 c8f22048e9e2a5c0ee6c339f29ac6d8a67475924 SHA1 6ebef68bfc752a1a88f851484454c25f738a7aff SHA256 84792c42edd5dd1ae9a6bc5b13448f51924ceb5b96aaaed69bd6d7a2bbcb9c88
