@@ -1,4 +1,4 @@
 EBUILD qutim-histman-0.2.9999.ebuild 1072 RMD160 c0b9ca3a301814424f7ecc160557d0175aa47f41 SHA1 94c0cba0ba159bbc438fa487a65211d43406808b SHA256 0aac84bc39373fc479766801a3ebd49d75ea53f24c521d5a6206370eb1ca3b7c
 EBUILD qutim-histman-0.3.9999.ebuild 880 RMD160 ab4686a63c421cc556b1f9f6d438f39219c89653 SHA1 10f4728a4281c662a9e038f03742268861839af3 SHA256 f72d9f9d3e6eac80e7c804aad8e936bbf8a088199bfd4528bfd45392de22131a
-MISC ChangeLog 453 RMD160 ee3a9974e6af1d4923a89ab53a36aef130c3a6ac SHA1 60881bf09ddc11ee899c6c979a4c3e679d3ffb04 SHA256 c8d497edcfd62f9e6ee197091c572df8aa6a4b31e1f60bf87fad00fa01e7f822
+MISC ChangeLog 562 RMD160 796b1b6b54987a2c4ef9ac2df260126ad3376eda SHA1 b690aba9e007672e037727da343604f6a4884bb4 SHA256 6f161cb421c03b4dff07b1c0982752f1cf815b594284621d126269df71a5a869
 MISC metadata.xml 242 RMD160 9c5b910c7c12c8a1ed8bd87a7ad0b9bcfc4733d4 SHA1 4c37aa691790a1b3c6ce27b54062f88f3243b1b7 SHA256 5cfd8583ff311843d5530c5a3d10fbe6c87b58b100697e505b3ac1838059755a
