@@ -1,4 +1,4 @@
 EBUILD qutim-urlpreview-0.2.9999.ebuild 983 RMD160 1b9e350ff60709c6158189160bcf25bf77f01979 SHA1 5485711681345e00ca7ab465e86b01b057b80211 SHA256 fff98889903488b4388836f9f5a9cc7bec1effdf01a6822870ad14acbca4d483
-EBUILD qutim-urlpreview-0.3.9999.ebuild 1037 RMD160 592ae7ae22650cecad3624ed07659e3f27347bc0 SHA1 6b1d2037d88fbb8c6adc30a4a40427aec637919d SHA256 feccec0b9aaccf2bd0bb3a5bddcc9410297af0497da48e571fe219c2dfd3393c
+EBUILD qutim-urlpreview-0.3.9999.ebuild 831 RMD160 285c7693b12bc6f59a3bacea0c6dc516ae33ded4 SHA1 0232ac9a68b3a775e898e9bf8355c6705e0269ef SHA256 5427eef4e6ac5ea6ece0aac19a482c2df6d211c5bd44c27831bcbdebb1451252
 MISC ChangeLog 446 RMD160 2bee12251a8b2317165606fb42ec881d57dda89e SHA1 3945bc45411a87f5c6719bf7cc4551c1c869daec SHA256 9a0671a5bbb19a0a8fc7f22f76a4c07c64881ed5be5ffefc7cb23ebb21eaaae5
 MISC metadata.xml 242 RMD160 9c5b910c7c12c8a1ed8bd87a7ad0b9bcfc4733d4 SHA1 4c37aa691790a1b3c6ce27b54062f88f3243b1b7 SHA256 5cfd8583ff311843d5530c5a3d10fbe6c87b58b100697e505b3ac1838059755a
