@@ -4,12 +4,15 @@
 
 EAPI="2"
 
-inherit git eutils qt4-r2 cmake-utils
+inherit git eutils cmake-utils
 
+EGIT_HAS_SUBMODULES="true"
 EGIT_REPO_URI="git://gitorious.org/qutim/plugins.git"
 EGIT_BRANCH="master"
 EGIT_COMMIT="${EGIT_BRANCH}"
-EGIT_PROJECT="qutim-plugins"
+EGIT_PROJECT="qutim"
+CMAKE_USE_DIR="${S}/plugins"
+
 DESCRIPTION="Aescrypto plugin for net-im/qutim"
 HOMEPAGE="http://www.qutim.org"
 
@@ -25,8 +28,6 @@ DEPEND="${RDEPEND}
 
 RESTRICT="debug? ( strip )"
 
-MY_PN=${PN#qutim-}
-
 src_unpack() {
 	git_src_unpack
 }
@@ -37,12 +38,6 @@ src_prepare() {
 		append-flags -O1 -g -ggdb
 		CMAKE_BUILD_TYPE="debug"
 	fi
-	mycmakeargs="-DQUTIM_ENABLE_ALL_PLUGINS=off \
-		-DURLPREVIEW=on"
-# 	for i in $(grep -rl "<qutim/" "${S}" | grep -v "\.git"); do
-# 		sed -e "s/<qutim\//<qutim-${PV}\//" -i "${i}";
-# 	done
-# 	sed -e "s/qutim/qutim-${PV}/" \
-# 		-e "s/QutimPlugin/QutimPlugin-${PV}/" -i "${S}/CMakeLists.txt"
+	mycmakeargs="-DQUTIM_ENABLE_ALL_PLUGINS=off -DURLPREVIEW=on"
 	CMAKE_IN_SOURCE_BUILD=1
 }
