@@ -4,6 +4,10 @@
 
 *qutim-clconf-0.3.9999 (07 Aug 2010)
 
+  22 May 2011; PM2D <m2d@sibnet.ru>
+  qutim-clconf-0.3.9999.ebuild:
+  Rewrited for use with new repository
+
   07 Aug 2010; Viktor Lazarev <taurus101v@gmail.com>
   +qutim-clconf-0.3.9999.ebuild, +metadata.xml:
   Initial ebuild
