@@ -4,6 +4,10 @@
 
 *qutim-histman-0.3.9999 (20 May 2010)
 
+  22 May 2011; PM2D <m2d@sibnet.ru>
+  qutim-histman-0.3.9999.ebuild:
+  Rewrited for use with new repository
+
   20 May 2010; Viktor Lazarev <taurus101v@gmail.com>
   qutim-histman-0.2.9999.ebuild, +qutim-histman-0.3.9999.ebuild:
   version bump
